--- a/complex/src/lib.rs.liquid
+++ b/complex/src/lib.rs.liquid
@@ -1,5 +1,6 @@
-{{mods_lib}}
-{% if library_option == "complex" %}use native_1c::component::AppCapabilities;
+{{- lib_mods_addin | strip }}
+
+use native_1c::component::AppCapabilities;
 use native_1c::widestring::{U16CStr, U16CString};
 use native_1c::OnceCell;
 use std::os::raw::c_long;
@@ -12,7 +13,7 @@ unsafe extern "C" fn GetClassObject(_name: *const u16, component: *mut *const u8
         return 0;
     };
     *component = match name.as_str() {
-        {{match_comp_name}}
+        {{lib_mach_object_name}}
         _ => return 0,
     };
     component as c_long
@@ -27,7 +28,7 @@ unsafe extern "C" fn DestroyObject(_component: *mut *const u8) -> c_long {
 unsafe extern "C" fn GetClassNames() -> *const u16 {
     CLASS_NAMES
         .get_or_init(|| {
-            U16CString::from_str("{{class_names_get}}")
+            U16CString::from_str("{{lib_class_names}}")
                 .unwrap()
                 .as_slice_with_nul()
                 .to_vec()
@@ -44,12 +45,12 @@ unsafe extern "C" fn SetPlatformCapabilities(capabilities: AppCapabilities) -> A
 #[cfg(test)]
 mod tests {
     use super::GetClassNames;
-    {% if use_insta == true %}use insta::{assert_debug_snapshot, assert_snapshot};{% endif %}
+    {% if use_insta == true -%}
+    use insta::{assert_debug_snapshot, assert_snapshot};
+    {%- endif %}
 
     fn get_class_names() {
         let class_names = unsafe { GetClassNames() };
         assert!(!class_names.is_null());
     }
 }
-
-{% endif %}
