--- a/simple/Cargo.toml.liquid
+++ b/simple/Cargo.toml.liquid
@@ -1,5 +1,5 @@
 [package]
-name = "{{crate_name}}"
+name = "{{ crate_name }}"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,14 +8,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-{% if library_option == "complex" %}native-1c = { git = "https://github.com/tuplecats/rust-native-1c" }
-{% else %}native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
+native_api_1c = { git = "https://github.com/Sebekerga/native_api_1c" }
 utf16_lit = "2.0.2"
-{% endif %}
-{% if use_insta == true %}[profile.dev.package]
+
+{% if use_insta -%}
+[profile.dev.package]
 insta.opt-level = 3
 similar.opt-level = 3
 
 [dev-dependencies]
 insta = { version = "1.31.0", features = ["redactions"] }
-{% endif %}
+{%- endif -%}
